# dev-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
config/: settings.yaml
docs/superpowers/specs/: 2026-06-12-multi-llm-profiles-design.md
src/dev_agent/: __init__.py  config.py
src/dev_agent/agent/: __init__.py  graph.py  harness.py  prompts.py  selector.py  state.py
src/dev_agent/cli/: __init__.py  main.py  repl.py
src/dev_agent/tools/: __init__.py  code_tools.py  filesystem.py  git_tools.py  registry.py  shell.py  web_tools.py
src/dev_agent/webhooks/: __init__.py  handlers.py  server.py
tests/: test_config_profiles.py  test_graph.py  test_harness.py  test_health.py  test_providers.py  test_security.py  test_selector.py  test_tools.py
