[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-agent"
version = "0.1.0"
description = "Software development assistant using LangGraph Deep Agent with harness techniques"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
anthropic = ["langchain-anthropic>=0.3.0"]
openai    = ["langchain-openai>=0.2.0"]
google    = ["langchain-google-genai>=2.0.0"]
groq      = ["langchain-groq>=0.2.0"]
all-llms  = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
]

[project.scripts]
dev-agent = "dev_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
